# Specter

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/: ARQUITETURA.md  FASES.md  US.md
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/actions/: mod.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/env_detect/: mod.rs
src-tauri/src/files/: mod.rs
src-tauri/src/persistence/: mod.rs
src-tauri/src/pty/: manager.rs  mod.rs  size.rs
src-tauri/src/windowing/: mod.rs
src/components/Autocomplete/: Autocomplete.test.tsx  Autocomplete.tsx  index.ts  suggest.ts
src/components/CheatSheet/: CheatSheet.test.tsx  CheatSheet.tsx  data.ts  index.ts
src/components/CommandPalette/: CommandPalette.test.tsx  CommandPalette.tsx  types.ts  useCommands.ts
src/components/EnvStatus/: EnvStatus.test.tsx  EnvStatus.tsx  index.ts
src/components/FavoriteDirs/: FavoriteDirs.test.tsx  FavoriteDirs.tsx  index.ts  types.ts  useDirs.ts
src/components/FolderPicker/: FolderPicker.test.tsx  FolderPicker.tsx  index.ts
src/components/History/: History.test.tsx  History.tsx  index.ts  types.ts  useHistory.ts
src/components/Launcher/: Launcher.test.tsx  Launcher.tsx
src/components/Panel/: Panel.test.tsx  Panel.tsx  SearchBar.test.tsx  SearchBar.tsx  TabBar.test.tsx  TabBar.tsx  ToolPanel.tsx  parseEnv.test.ts  parseEnv.ts  useTabs.test.ts  (+1 more)
src/hooks/: useShortcuts.test.ts  useShortcuts.ts
src/ipc/: actions.ts  capture.ts  env.ts  files.ts  index.ts  store.ts  terminal.ts  window.ts
src/store/: persist.ts  settings.ts
src/styles/: index.css
src/types/: ipc.ts  settings.ts
(+26 files in other folders)
